# HPC-Project-2

./: CMakeLists.txt  Deliverable Report.md  README.md  Report Instruction.txt  data_after.txt  data_before.txt  exp.txt  file-creation.c  final-fish-communication.c  final_fish_data.txt  fish-communication-isend.c  fish-struct-communication.c  fish-test.c  fish_data_after.txt  fish_data_before.txt  fish_data_final.txt  fish_data_initial.txt  fish_data_master.txt  fish_data_received_0.txt  fish_data_received_1.txt  fish_data_received_2.txt  fish_data_received_3.txt  hello-test.c  main.c  mpi-fish-communication-offset.c  mpi-fish-communication.c  mpi-fish-simuation-scatter-gather.c  mpi-fish-simulation.c  out1.txt  report.md  round-robin-basic.c  scatter-demo.c  send-recv-squared.c  test.c  test.txt
